# rust-fs-tutorial

./: .gitignore  Cargo.toml  README.md
resources/: sample1.rs
src/: dir.rs  errors.rs  files.rs  link.rs  rstat.rs  statistics.rs
