[package]
name = "training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "file_examples"
path = "src/files.rs"

[[bin]]
name = "dir_examples"
path = "src/dir.rs"

[[bin]]
name = "rstat"
path = "src/rstat.rs"

[[bin]]
name = "link_examples"
path = "src/link.rs"

[dependencies]
structopt = "*"
